--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,15 @@ Package: RaCE.NMA
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Michael", "Pearce", , "michaelpearce@reed.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-9313-271X"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports:
+    stats,
+    utils,
+    magrittr,
+    dplyr
