--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: RaCE.NMA
-Title: What the Package Does (One Line, Title Case)
+Title: Rank-Clustered Estimation for Network Meta-Analysis
 Version: 0.0.0.9000
 Authors@R: 
     person("Michael", "Pearce", , "michaelpearce@reed.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9313-271X"))
-Description: What the package does (one paragraph).
+Description: This package implemented the RaCE-NMA model for post-hoc rank-clustering of treatments or interventions in network meta-analyses.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
