--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ Imports:
     utils,
     magrittr,
     dplyr
+Suggests: knitr, rmarkdown, devtools
+VignetteBuilder: knitr
+URL: https://pearce790.github.io/RaCE.NMA/, https://github.com/pearce790/RaCE.NMA/
