--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,14 @@ import(ggplot2)
 import(invgamma)
 import(mvtnorm)
 import(reshape2)
-import(stats)
 import(utils)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
+importFrom(stats,dnorm)
+importFrom(stats,na.exclude)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,var)
