update to ensure package terminology matches that of published paper; adding paper link throughout website.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(create_cumulativeranking)
 export(create_forestplot)
 export(create_violinplot)
 export(createtrace_K)
-export(createtrace_omega)
+export(createtrace_mu)
 export(fit_RCMVN)
 export(mcmc_RCMVN)
 export(sample_partition_correlation)
