function/data updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,7 @@ Imports:
     mvtnorm,
     coda,
     reshape2,
-    ggplot2,
-    cowplot,
-    gridExtra
-Suggests: knitr, rmarkdown, devtools
+    ggplot2
+Suggests: knitr, rmarkdown, devtools, cowplot, gridExtra
 VignetteBuilder: knitr
 URL: https://pearce790.github.io/RaCE.NMA/, https://github.com/pearce790/RaCE.NMA/
